--- a/views/user/coupon.ejs
+++ b/views/user/coupon.ejs
@@ -9,7 +9,7 @@
 <body>
     <header>
 
-        <%- include('../partials/users/header',{search}) %>
+        <%- include('../partials/users/header',{search,cart}) %>
     
     </header>
     <nav>
