--- a/views/user/myAccount.ejs
+++ b/views/user/myAccount.ejs
@@ -16,7 +16,7 @@
         <h2>Update profile</h2>
         <div class="account-options">
             <a href="/profile"><button>My Details</button></a>
-            <a href=""><button>My Orders</button></a>
+            <a href="/myOrders"><button>My Orders</button></a>
             <a href=""><button>My Ratings</button></a>
             <a href=""><button>My Wish List</button></a>
             <a href=""><button>My Wallet</button></a>
