--- a/views/user/password.ejs
+++ b/views/user/password.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <%- include('../partials/users/header', { search }) %>
+        <%- include('../partials/users/header', { search , cart}) %>
     </header>
     <div class="container">
         <!-- Navigation Breadcrumb -->
