--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <%- include('../partials/users/header', {search}) %>
+        <%- include('../partials/users/header', {search , cart }) %>
     </header>
     <nav class="breadcrumb">
         <a href="/">Home</a> > <a href="/shop">All Products</a> > <a href="#"><%= product.productName %></a>
