--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -14,7 +14,7 @@
 <body>
     
 
-        <%- include('../partials/users/header',{search}) %>
+        <%- include('../partials/users/header',{search , cart}) %>
     
     
     <div class="breadcrumb">
