--- a/views/user/verifyEmailforgot.ejs
+++ b/views/user/verifyEmailforgot.ejs
@@ -13,7 +13,7 @@
 
     <header>
 
-        <%- include('../partials/users/header',{search}) %>
+        <%- include('../partials/users/header',{search , cart}) %>
     
     </header>
 
