--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -11,7 +11,7 @@
 
 <header>
 
-    <%- include('../partials/users/header',{search}) %>
+    <%- include('../partials/users/header',{search, cart}) %>
 
 </header>
 
